Fin del proyecto

--- a/contacto.html
+++ b/contacto.html
@@ -20,9 +20,14 @@
     />
     <meta
       name="keywords"
-      content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
+      content="Adopción, adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
     />
-    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="img/icono
+    .ico"
+      type="image/x-icon"
+    />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -82,7 +87,7 @@
         </nav>
       </header>
       <main class="main-contacto">
-        <p class="main-contacto__title">contáctanos</p>
+        <h1 class="main-contacto__title">contáctanos</h1>
         <div class="main-contacto__container">
           <img src="img/donar.png" alt="Imagne de perrito animado." />
           <p class="main-contacto__text">
@@ -102,20 +107,20 @@
               <label for="name" id="name" name="name">Nombre</label>
               <input type="text" name="name" id="name" />
             </div>
-          <div class="contact-form__item">
-            <label for="email" id="email" name="email">Correo</label>
-            <input type="email" name="email" id="email" />
+            <div class="contact-form__item">
+              <label for="email" id="email" name="email">Correo</label>
+              <input type="email" name="email" id="email" />
+            </div>
+            <div class="contact-form--item">
+              <label for="message" id="message" name="message">Mensaje</label>
+              <textarea
+                name="message"
+                id="message"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
           </div>
-          <div class="contact-form--item">
-            <label for="message" id="message" name="message">Mensaje</label>
-            <textarea
-              name="message"
-              id="message"
-              cols="30"
-              rows="10"
-            ></textarea>
-          </div>
-        </div>
           <button class="contact-form__button" type="reset">Enviar</button>
         </form>
       </main>
@@ -165,11 +170,11 @@
         </div>
       </footer>
     </div>
+    <!--link bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <!--link bootstrap js-->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"
-  ></script>
 </html>
