--- a/donar.html
+++ b/donar.html
@@ -20,9 +20,9 @@
     />
     <meta
       name="keywords"
-      content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
+      content="Donaciones, ayudar , donar, , apooyar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
     />
-    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -82,7 +82,7 @@
         </nav>
       </header>
       <main class="main-donar">
-        <p class="main-donar__title">Dona y ayudanos</p>
+        <h1 class="main-donar__title">Dona y ayudanos</h1>
         <div class="main-donar__description">
           <img
             class="main-donar__img"
@@ -100,7 +100,7 @@
           <div class="donate-form__card">
             <img
               class="donate-form__img"
-              src="img/card2.jpg"
+              src="img/card.jpg"
               alt="Imagen de una tarjeta de credito"
             />
           </div>
@@ -215,11 +215,11 @@
         </div>
       </footer>
     </div>
+    <!--link bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <!--link bootstrap js-->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"
-  ></script>
 </html>
