--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       name="keywords"
       content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
     />
-    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -124,43 +124,112 @@
       </div>
       <main class="main-index">
         <div class="main-index__carousel">
-          <h2 class="carousel-title">Estás son algunas mascotas que puedes adoptar en nuestra página</h2>
-        <div id="carouselExampleIndicators" class="carousel slide"  style="width: 100%; margin: auto;" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <h2 class="carousel-title">
+            Estás son algunas mascotas que puedes adoptar en nuestra página
+          </h2>
+          <div
+            id="carouselExampleIndicators"
+            class="carousel slide"
+            data-bs-ride="true"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="4"
+                aria-label="Slide 5"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="img/boby.jpg"
+                  class="d-block w-100"
+                  alt="Imagen de un gato."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/garfield.jpg"
+                  class="d-block w-100"
+                  alt="Imagen de una gato."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/toby.jpg"
+                  class="d-block w-100"
+                  alt="Imagen de un perro."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/boky.jpg"
+                  class="d-block w-100"
+                  alt="Imagen de perro."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="img/pelusa.jpg"
+                  class="d-block w-100"
+                  alt="Imagen de un perro."
+                />
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner" style="height: 500px;" >
-            <div class="carousel-item active" style="height: 500px;">
-              <img src="img/boby.jpg" class="d-block w-100" alt="Imagen de un gato.">
-            </div>
-            <div class="carousel-item" style="height: 500px;">
-              <img src="img/garfield.jpg" class="d-block w-100" alt="Imagen de una gato.">
-            </div>
-            <div class="carousel-item" style="height: 500px;">
-              <img src="img/toby.jpg" class="d-block w-100" alt="Imagen de un perro.">
-            </div>
-            <div class="carousel-item" style="height: 500px;">
-              <img src="img/boky.jpg" class="d-block w-100" alt="Imagen de perro.">
-            </div>
-            <div class="carousel-item" style="height: 500px;">
-              <img src="img/pelusa.jpg" class="d-block w-100" alt="Imagen de un perro.">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"  >
-            <span class="carousel-control-prev-icon" aria-hidden="true" style="color: #AD8B73;"></span>
-            <span class="visually-hidden" style="color: #AD8B73;">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-        </div>
-        
+
         <h3 class="main-index__title">
           Experiencias de personas que adoptaron por primera vez.
         </h3>
@@ -285,14 +354,16 @@
         </div>
       </footer>
     </div>
+    <!--Lin de bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+    <!--link de libreria AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </html>
