--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -20,9 +20,9 @@
     />
     <meta
       name="keywords"
-      content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
+      content="mascotas perdidas, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
     />
-    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -86,9 +86,9 @@
       </header>
 
       <main class="main-mascotasPerdidas">
-        <p class="main-mascotasPerdidas__text">
-           Mascotas reportadas como perdidas. 
-        </p>
+        <h1 class="main-mascotasPerdidas__text">
+          Mascotas reportadas como perdidas
+        </h1>
         <section class="pets-cards">
           <div class="lost-pets-cards">
             <div
@@ -301,16 +301,16 @@
         </div>
       </footer>
     </div>
+    <!--link bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+    <!--link libreria AOS js-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
-  <!--link bootstrap js-->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"
-  ></script>
-  <!--link libreria AOS js-->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </html>
