--- a/adoptar.html
+++ b/adoptar.html
@@ -22,7 +22,7 @@
       name="keywords"
       content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
     />
-    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -82,9 +82,7 @@
         </nav>
       </header>
       <main class="main-adoption">
-        <p class="main-adoption__text">
-          ¡Adopta a tu nuevo mejor amigo!
-        </p>
+        <h1 class="main-adoption__text">¡Adopta a tu nuevo mejor amigo!</h1>
 
         <div class="pets-cards">
           <section class="pets-cards__adoption">
@@ -279,7 +277,10 @@
                     <p class="filter-form__text">Clase:</p>
                     <div class="filter-form__items">
                       <input type="checkbox" />
-                      <label class="filter-form__item" for="perros">Perros</label> <br />
+                      <label class="filter-form__item" for="perros"
+                        >Perros</label
+                      >
+                      <br />
                       <input type="checkbox" />
                       <label class="filter-form__item" for="gatos">Gatos</label>
                     </div>
@@ -288,7 +289,10 @@
                     <p class="filter-form__text">Sexo:</p>
                     <div class="filter-form__items">
                       <input type="checkbox" />
-                      <label class="filter-form__item" for="hembra">Hembra</label> <br />
+                      <label class="filter-form__item" for="hembra"
+                        >Hembra</label
+                      >
+                      <br />
                       <input type="checkbox" />
                       <label class="filter-form__item" for="macho">Macho</label>
                     </div>
@@ -297,11 +301,18 @@
                     <p class="filter-form__text">Tamaño:</p>
                     <div class="filter-form__items">
                       <input type="checkbox" />
-                      <label class="filter-form__item" for="pequeños">Pequeños</label><br />
+                      <label class="filter-form__item" for="pequeños"
+                        >Pequeños</label
+                      ><br />
                       <input type="checkbox" />
-                      <label class="filter-form__item" for="medianos">Medianos</label> <br />
+                      <label class="filter-form__item" for="medianos"
+                        >Medianos</label
+                      >
+                      <br />
                       <input type="checkbox" />
-                      <label class="filter-form__item" for="grandes">Grandes</label>
+                      <label class="filter-form__item" for="grandes"
+                        >Grandes</label
+                      >
                     </div>
                   </div>
                   <button class="filter__button">FILTRAR</button>
@@ -357,16 +368,16 @@
         </div>
       </footer>
     </div>
+    <!--link bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+    <!--link libreria AOS JS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
-  <!--link bootstrap js-->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"
-  ></script>
-  <!--link libreria AOS JS-->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </html>
