Fin del proyecto

--- a/adoptar.html
+++ b/adoptar.html
@@ -13,10 +13,10 @@
       property="og:title"
       content="Adopt Me | Adopta un mejor amigo para tu hogar"
     />
-    <meta property="og:url" content="https://adoptarayudar.000webhostapp.com" />
+    <meta property="og:url" content="https://adoptarayudar.netlify.app" />
     <meta
       property="image"
-      content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
+      content="https://adoptarayudar.netlify.app/img/logo.jpg"
     />
     <meta
       name="keywords"
